<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/name_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center" />

    <DatePicker
        android:id="@+id/input_date"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:text="@string/input_date_text" />

    <EditText
        android:id="@+id/input_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/cost_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="15"
        android:textAlignment="center" />

</LinearLayout>