<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/ListFragment">

    <fragment
        android:id="@+id/ListFragment"
        android:name="maliauka.sasha.ui.list.ListFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_list">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_mySettingsFragment"
            app:destination="@id/mySettingsFragment" />
        <action
            android:id="@+id/action_ListFragment_to_editRecordFragment"
            app:destination="@id/editRecordFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="maliauka.sasha.ui.add.AddRecordFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_add_record">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/ListFragment" />
    </fragment>

    <fragment
        android:id="@+id/mySettingsFragment"
        android:name="maliauka.sasha.ui.settings.SettingsFragment"
        android:label="@string/settings_fragment_label">
        <action
            android:id="@+id/action_mySettingsFragment_to_FirstFragment"
            app:destination="@id/ListFragment" />
    </fragment>
    <fragment
        android:id="@+id/editRecordFragment"
        android:name="maliauka.sasha.EditRecordFragment"
        android:label="EditRecordFragment" >
        <action
            android:id="@+id/action_editRecordFragment_to_ListFragment"
            app:destination="@id/ListFragment" />
    </fragment>
</navigation>